# swiss-jobs-scrapper

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: changelog-config.json
.github/workflows/: cd.yml  ci.yml  integration-tests.yml
src/swiss_jobs_scraper/: __init__.py
src/swiss_jobs_scraper/ai/: __init__.py  config.py  features.py  models.py  processor.py  prompts.py
src/swiss_jobs_scraper/ai/providers/: __init__.py  base.py  gemini.py  groq.py
src/swiss_jobs_scraper/api/: __init__.py  main.py
src/swiss_jobs_scraper/api/routes/: health.py  jobs.py
src/swiss_jobs_scraper/cli/: __init__.py  main.py
src/swiss_jobs_scraper/core/: __init__.py  exceptions.py  models.py  provider.py  session.py
src/swiss_jobs_scraper/providers/: __init__.py
src/swiss_jobs_scraper/providers/job_room/: __init__.py  client.py  constants.py  mapper.py
src/swiss_jobs_scraper/storage/: __init__.py  config.py  connection.py  migrations.py  models.py  repository.py
tests/: conftest.py  test_api.py  test_job_room.py  test_live_integration.py  test_models.py  test_output_fields.py
tests/e2e/: __init__.py  test_live.py
tests/integration/: test_api.py
tests/unit/: test_ai.py  test_job_room.py  test_models.py  test_storage.py
