[tool.poetry]
name = "swiss-jobs-scraper"
version = "1.0.0"
description = "Production-grade Swiss job market scraper with CLI and API interfaces"
authors = ["JobGipfel Team"]
readme = "README.md"
license = "MIT"
packages = [{include = "swiss_jobs_scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["http2"], version = "^0.27"}
pydantic = "^2.5"
pydantic-settings = "^2.1"
click = "^8.1"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
rich = "^13.7"
tenacity = "^8.2"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.2"
mypy = "^1.8"
black = "^24.0"
isort = "^5.13"
bandit = "^1.7"
safety = "^3.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "black>=24.0",
    "isort>=5.13",
    "bandit>=1.7",
    "safety>=3.0",
]

[tool.poetry.scripts]
swiss-jobs = "swiss_jobs_scraper.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true


[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["swiss_jobs_scraper"]
skip_gitignore = true

